fix figure sizing

--- a/tutorials/R/NEON-general/neon-overview/release-provisional/release-provisional.html
+++ b/tutorials/R/NEON-general/neon-overview/release-provisional/release-provisional.html
@@ -150,7 +150,7 @@ releases and the default display, which is the latest Release plus Provisional
 data.</p>
 <figure>
 	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-menu.png">
-	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-menu.png" alt="Menu bar on Explore NEON Data page showing Release menu."></a>
+	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-menu.png" alt="Menu bar on Explore NEON Data page showing Release menu." style="width:50%" height="auto"></a>
 </figure>
 <p>Stay on the default menu option for now. Navigate to quantum line
 PAR, DP1.00066.001. Expand the data availability chart by clicking on
@@ -160,7 +160,7 @@ a screenshot from January 2024; more data and possibly more Releases may have
 been published by the time you follow this tutorial.</p>
 <figure>
 	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/quantum-line-availability.png">
-	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/quantum-line-availability.png" alt="Data availability chart for PAR quantum line."></a>
+	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/quantum-line-availability.png" alt="Data availability chart for PAR quantum line." style="width:75%" height="auto"></a>
 </figure>
 <p>Here we can consult the key and see that data up to June 2023 are in a Release
 (solid boxes) and data collected since June 2023 are Provisional (hatched
@@ -170,7 +170,7 @@ boxes). There are no 2024 data available yet (pale grey boxes).</p>
 citation information for publications using these data.</p>
 <figure>
 	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/quantum-line-citation.png">
-	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/quantum-line-citation.png" alt="Provisional and RELEASE-2024 citations for PAR quantum line."></a>
+	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/quantum-line-citation.png" alt="Provisional and RELEASE-2024 citations for PAR quantum line." style="width:50%" height="auto"></a>
 </figure>
 <p>Note that the citation guidance is different for Provisional and Released
 data. The Release citation includes a direct link to a DOI. Since Provisional
@@ -186,7 +186,7 @@ Select BARR (Utquiagvik) and BONA (Caribou Creek) for the year of 2023.
 Click Next.</p>
 <figure>
 	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/include-provisional-menu.png">
-	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/include-provisional-menu.png" alt="Radio buttons to select whether to include or exclude Provisional data from download."></a>
+	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/include-provisional-menu.png" alt="Radio buttons to select whether to include or exclude Provisional data from download." style="width:50%" height="auto"></a>
 </figure>
 <p>This page in the download process asks whether you want to download
 provisional data. By default it is set to Exclude, and will only download
@@ -200,14 +200,14 @@ the Release menu on the lefthand bar. For this example, let’s use
 RELEASE-2023.</p>
 <figure>
 	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-2023-menu.png">
-	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-2023-menu.png" alt="RELEASE-2023 selected in explore data products menu."></a>
+	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-2023-menu.png" alt="RELEASE-2023 selected in explore data products menu." style="width:50%" height="auto"></a>
 </figure>
 <p>Now, in the data availability chart, we can see there are no hatched boxes,
 since we’ve selected only data that are in a Release. And data availability
 extends only through June 2022, the end date for sensor data in RELEASE-2023.</p>
 <figure>
 	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-2023-availability.png">
-	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-2023-availability.png" alt="Data availability chart for PAR quantum line in RELEASE-2023."></a>
+	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-2023-availability.png" alt="Data availability chart for PAR quantum line in RELEASE-2023." style="width:90%" height="auto"></a>
 </figure>
 <h2 id="downloading-data-using-neonutilities">Downloading data using neonUtilities</h2>
 <p>NEON data can also be downloaded in R, using the <code>neonUtilities</code> package. If
