--- a/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/00-Raster-Structure.html
+++ b/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/00-Raster-Structure.html
@@ -385,6 +385,11 @@ information is strung together as a series of text elements.</p>
 <p>The spatial extent of an R spatial object represents the geographic “edge” or
 location that is the furthest north, south, east and west. In other words, <code>extent</code>
 represents the overall geographic coverage of the spatial object.</p>
+<p>You can see the spatial extent using <code>terra::ext</code>:</p>
+<pre><code>ext(DSM_HARV)
+
+## SpatExtent : 732000, 733000, 4713000, 4714000 (xmin, xmax, ymin, ymax)
+</code></pre>
 <h2 id="resolution">Resolution</h2>
 <p>A raster has horizontal (x and y) resolution. This resolution represents the
 area on the ground that each pixel covers. The units for our data are in meters.
@@ -403,13 +408,13 @@ Given our data resolution is 1 x 1, this means that each pixel represents a
 
 ## [1] &quot;+proj=utm +zone=18 +datum=WGS84 +units=m +no_defs&quot;
 </code></pre>
-<h2 id="calculate-raster-min-and-max-values">Calculate Raster Min and Max Values</h2>
-<p>It is useful to know the minimum or maximum values of a raster dataset. In
+<h2 id="display-raster-min-and-max-values">Display Raster Min and Max Values</h2>
+<p>It can be useful to know the minimum or maximum values of a raster dataset. In
 this case, given we are working with elevation data, these values represent the
 min/max elevation range at our site.</p>
-<p>Raster statistics are often calculated and embedded in a <code>geotiff</code> for us.
+<p>Raster statistics are often calculated and embedded in a <code>Geotiff</code> for us.
 However if they weren’t already calculated, we can calculate them using the
-<code>setMinMax()</code> function.</p>
+<code>min()</code> or <code>max()</code> functions.</p>
 <pre><code># view the min and max values
 
 min(DSM_HARV)
@@ -462,8 +467,7 @@ RGB_HARV &lt;-
 
 par(col.axis=&quot;white&quot;,col.lab=&quot;white&quot;,tck=0)
 
-plotRGB(RGB_HARV, r = 1, g = 2, b = 3, 
-        axes=TRUE, main=&quot;Raster With NoData Values Rendered in Black&quot;)
+plotRGB(RGB_HARV, r = 1, g = 2, b = 3, axes=TRUE)
 </code></pre>
 <p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/rfigs/demonstrate-no-data-black-1.png" alt="Colorized raster image with NoDataValues around the edge rendered in black" /></p>
 <p>In the next image, the black edges have been assigned <code>NoDataValue</code>. R doesn’t
@@ -486,8 +490,13 @@ newRGBImage &lt;- app(RGB_HARV, func)
 
 # Create an RGB image from the raster stack
 
-plotRGB(newRGBImage, r = 1, g = 2, b = 3,
-        axes=TRUE, main=&quot;Raster With No Data Values\nNoDataValue= NA&quot;)
+plotRGB(newRGBImage, r = 1, g = 2, b = 3, axis=TRUE)
+
+## Warning in plot.window(...): &quot;axis&quot; is not a graphical parameter
+
+## Warning in plot.xy(xy, type, ...): &quot;axis&quot; is not a graphical parameter
+
+## Warning in title(...): &quot;axis&quot; is not a graphical parameter
 </code></pre>
 <p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/rfigs/demonstrate-no-data-1.png" alt="Colorized raster image with NoDataValues around the edge removed" /></p>
 <h3 id="nodata-value-standard">NoData Value Standard</h3>
@@ -527,12 +536,12 @@ identifying outliers and bad data values in our raster data.</p>
 <pre><code># view histogram of data
 
 hist(DSM_HARV,
-     main=&quot;Distribution of Digital Surface Model Values\n Histogram Default: 100,000 pixels\n NEON Harvard Forest&quot;,
+     main=&quot;Distribution of Digital Surface Model Values\n NEON Harvard Forest (HARV)&quot;,
      xlab=&quot;DSM Elevation Value (m)&quot;,
      ylab=&quot;Frequency&quot;,
      col=&quot;lightblue&quot;)
 </code></pre>
-<p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/rfigs/view-raster-histogram-1.png" alt="Histogram showing the distribution of digital surface model values that has a default maximum pixels value of 100,000" /></p>
+<p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/00-Raster-Structure/rfigs/view-raster-histogram-1.png" alt="Histogram showing the distribution of digital surface model values" /></p>
 <p>The distribution of elevation values for our <code>Digital Surface Model (DSM)</code> looks
 reasonable. It is likely there are no bad data values in this particular raster.</p>
 <h2 id="raster-bands">Raster Bands</h2>
